<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inner_content"
    android:layout_gravity="right"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/header_layout" />

    <Button
        android:id="@+id/btnTry"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:visibility="invisible"
        android:text="Button" />

    <ImageView
        android:id="@+id/user_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_picture" />

    <TextView
        android:id="@+id/userWecome_tv"
        style="@style/WrapSmallMid.Text.LtGrey"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:text="@string/welcome_user_first"
        android:textColor="@color/DarkGrey"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <Button
            style="@style/Wrap.Text.White"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_blue"
            android:gravity="center"
            android:text="@string/Watch_demo"
            android:textSize="18sp" />

        <Button
            style="@style/Wrap.Text.White"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_blue"
            android:gravity="center"
            android:text="@string/Invite_Friends"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>