<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reset_temp_pwd_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/reset_iclude_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/reset_header"
            layout="@layout/header_layout" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/userResetPass_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:paddingTop="20dp"
                android:src="@drawable/default_picture" />

            <TextView
                android:id="@+id/user_nameTemp_tv"
                style="@style/Wrap.Text.LtBlue"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="John Smith"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/userEmilTemp_tv"
                style="@style/WrapSmallMid.Text.LtGrey"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:text="john.smith@gmail.com" />

            <com.vinfotech.widget.FloatLabel
                android:id="@+id/temp_pwd_et"
                style="@style/Wrap.EditText.LtGrey"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:hint="@string/Temporary_Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/DarkGrey"
                android:textSize="20sp" />

            <com.vinfotech.widget.FloatLabel
                android:id="@+id/new_pwd_et"
                style="@style/Wrap.EditText.LtGrey"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/New_Password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/DarkGrey"
                android:textSize="20sp" />

            <com.vinfotech.widget.FloatLabel
                android:id="@+id/retype_pwd_et"
                style="@style/Wrap.EditText.LtGrey"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:hint="@string/Retype_Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/DarkGrey"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>